# RABO-drl-robot-navigation

./: .gitignore  .gitmodules  LICENSE  README.md
.devcontainer/: Dockerfile
src/drl_agent/: CMakeLists.txt  package.xml
src/drl_agent/config/: environment.yaml  hyperparameters.yaml  test_config.yaml  train_config.yaml
src/drl_agent/launch/: test_td7.launch.py
src/drl_agent/scripts/environment/: environment.py  environment_interface.py
src/drl_agent/scripts/policy/: td7_agent.py  test_td7_agent.py  train_td7_agent.py
src/drl_agent/scripts/utils/: buffer.py  file_manager.py  plot_metrics.py  plot_reward.py  plot_trajectories_on_map.py  point_cloud2.py
src/drl_agent_description/: CMakeLists.txt  package.xml
src/drl_agent_description/launch/: agent_description.launch.py
src/drl_agent_description/urdf/laser/: hokuyo.xacro
src/drl_agent_description/urdf/p3dx/: pioneer3dx.urdf.xacro  pioneer3dx_plugins.xacro
src/drl_agent_gazebo/: CMakeLists.txt  package.xml
src/drl_agent_gazebo/config/: config.rviz  slam.yaml
src/drl_agent_gazebo/launch/: gazebo_world.launch.py  rviz.launch.py  simulation.launch.py  slam.launch.py  spawn_agent.launch.py
src/drl_agent_gazebo/models/obstacle/: model.config  model.sdf
src/drl_agent_gazebo/models/td7_world/: model.config  model.sdf
src/drl_agent_gazebo/worlds/: td7_dynamic.world  td7_empty.world  td7_static.world
src/drl_agent_interfaces/: CMakeLists.txt  package.xml
src/drl_agent_interfaces/action/: StartDrlSession.action
src/drl_agent_interfaces/srv/: GetDimensions.srv  GetStartGoalPairs.srv  GetTestEpisodes.srv  Reset.srv  SampleActionSpace.srv  Seed.srv  Step.srv
